# insure-calculator-api

./: .env.prod.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start.sh
assets/: ТЗ.md
src/: config.py  main.py
src/application/dto/: log_message.py
src/application/protocols/: log.py  tariff.py  transaction_context.py
src/application/scenarios/: calculate_insurence.py  tariff_service.py
src/application/scenarios/contracts/: calculate_insurence.py  tariff.py
src/domain/entities/: tariff.py
src/domain/exceptions/: base.py  tariff.py
src/domain/protocols/: tariff.py
src/infrastructure/: di.py
src/infrastructure/kafka_logger/: __init__.py  broker.py  log_scheduler.py
src/infrastructure/persistence/: database.py  transaction_context.py
src/infrastructure/persistence/migrations/: env.py
src/infrastructure/persistence/migrations/versions/: 2024_12_03_2306-b0351a7207ba_initial.py
src/infrastructure/persistence/models/: __init__.py  base.py  log.py  tariff.py
src/infrastructure/persistence/repositories/: log.py  sqla_session_mixin.py  tariff.py
src/presentation/webapi/: examples.py
src/presentation/webapi/handlers/: __init__.py  default.py  docs.py  exceptions.py  tariff.py
src/presentation/webapi/schemas/: requests.py
