[tool.poetry]
name = "insure-calculator-api"
version = "0.1.0"
description = ""
authors = ["artyomklg <artem0801200269@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.115.5" }
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
dishka = "^1.4.2"
pydantic-settings = "^2.6.1"
faststream = { extras = ["kafka"], version = "^0.5.31" }
apscheduler = "^3.11.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
ruff = "^0.8.1"
pre-commit = "^4.0.1"

[tool.mypy]
strict = true
warn_unreachable = true
show_column_numbers = true
show_error_context = true
check_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.roof.lint]
select = ["ALL"]
ignore = [
    # Rules that should be turned on in the near future
    'N818',
    'B904',
    'FIX002',
    'RUF012',

    # Rules emitting false alerts
    'N804',
    'B008',
    'BLE001',
    'RUF009',
    'RUF001',

    # Rules that are not applicable in the project for now
    'D',
    'TID252',
    'D104',
    'ANN',
    'SLF001',
    'ARG',
    'D100',
    'PLR0913',
    'TCH002',
    'EXE002',

    # Strange and obscure rules that will never be turned on
    'ANN101',
    'FA100',
    'TRY003',
    'TRY201',
    'EM',
    'PERF203',
    'TCH001',
    'TD002',
    'PTH201',
    'RSE102',
    'RET504',
    'FBT001',
    'TD003',
    'B024',
    'ISC001',
    'B027',
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['F401']

"test_*" = ['S101', 'PLR2004', 'PT023', 'PT001', 'PT006']
"conftest.py" = ['PT023', 'PT001', 'PT006']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
